--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -175,10 +175,8 @@
 
 
 
-                                    <div class="boxed boxed--lg boxed--border">
-                                        <div class="text-center">
-                                           <span class="label" style="background-color: #ffffff"> </span>
-                                        </div>
+                                    <div class="boxed  boxed--border">
+
                                         <div class="clearfix text-center">
 
                                             <div class="row justify-content-md-center">
@@ -197,7 +195,7 @@
                                                     <span class="h5 mb-0">SEX: [[${verifiedrecord.getGender}]]  |  DOB: [[${verifiedrecord.getDOB}]]  </span>
 
 
-                                                    <a  th:if="${verifiedrecord.isLocked() == false}" href="#"  data-notification-link="newsletter-1" style="float:right; color: #007d53">
+                                                    <a  th:if="${verifiedrecord.isLocked() == false}" href="#"  data-notification-link="newsletter-1" style="float:left; color: #007d53">
                                                         <i class="material-icons" style="font-size: 12px">edit</i>
                                                         <span style="text-decoration: underline">Request update</span>
                                                     </a>
@@ -479,10 +477,10 @@
         <!--</div>-->
 
       <div class="notification pos-right pos-bottom col-md-4 col-lg-3" data-animation="from-bottom" data-notification-link="newsletter-1"
-           style="height: 100vh;">
+           style="height: 80vh;">
           <div class="feature feature-1 text-left">
 
-              <div class="feature__body boxed boxed--lg boxed--border" style="height: 100vh">
+              <div class="feature__body boxed boxed--lg" style="height: 80vh">
                   <div class="modal-close modal-close-cross"></div>
 
                   <div class="container">
