--- a/src/main/resources/templates/rating.html
+++ b/src/main/resources/templates/rating.html
@@ -230,7 +230,7 @@
 
                                         <div class="row mb-3">
                                             <div class="col-2 col-example">Poor</div>
-                                            <div class="col-8 col-example"><input value="1" type="hidden" required="true" class="rating mt-0"
+                                            <div class="col-8 col-example"><input   type="hidden" required="true" class="rating mt-0"
                                                                                     th:field="*{stars}"></div>
                                             <div class="col-2 col-example mt-0 text-left">Great</div>
                                         </div>
